style(config.scss): 修改边框的配置色

--- a/src/styles/config.scss
+++ b/src/styles/config.scss
@@ -19,7 +19,7 @@ $normalTextColor: #606266; // 常规文字
 $subTextColor: #909399; // 次要文字
 $placeholderTextColor: #C0C4CC; // 占位文字
 
-$borderColor: #F2F6FC;
+$borderColor: #DCDFE6;
 
 $workspaceBgColor: #e4e4e4;
 
